24 withut sec manager
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>